ingress.yaml
apiVersion: networking.k8s.io/v1  # extensions/v1beta1
kind: Ingress
metadata:
  name: fileshare
spec:
  rules:
    - host: fileshare.s000001.edu.slurm.io
      http:
        paths: 
          - path: /
            pathType: Prefix
            backend:
              service: 
                name: fileshare
                port : 
                  number: 80
